--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'pub.devrel:easypermissions:0.3.0'
 
+    compile 'com.umeng.analytics:analytics:latest.integration'
+
 }
