--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,12 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
 
         <activity
+            android:name="com.bb.taold.activitiy.loan.LoanConfirmActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <activity
             android:name="com.bb.taold.activitiy.DemoActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:screenOrientation="portrait"
