--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,23 @@
             android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
+        <activity
+            android:name="com.bb.taold.activitiy.repay.AutoRepayActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <activity
+            android:name="com.bb.taold.activitiy.repay.RepayInfoActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity
+            android:name="com.bb.taold.activitiy.repay.RepaySuccessActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+
         <!-- 友盟统计 -->
         <meta-data
             android:name="UMENG_APPKEY"
