--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,12 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
 
         <activity
+            android:name="com.bb.taold.activitiy.addBankCard.AddBankCardFinalActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <activity
             android:name=".activitiy.DemoActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:screenOrientation="portrait"
@@ -88,6 +94,11 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name="com.bb.taold.activitiy.repay.RepaySuccessActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity
+            android:name="com.bb.taold.activitiy.repay.RepayDetailActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden" />
