--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ buildscript {
 allprojects {
     repositories {
         maven { url "https://jitpack.io" }
+        maven {
+            url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/"
+        }
         jcenter()
     }
 }
