--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,16 @@ buildscript {
         jcenter()
     }
 }
-
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '25.1.0'
+            }
+        }
+    }
+}
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -93,6 +102,7 @@ dependencies {
     compile files('libs/BaiduLBS_Android.jar')
     compile files('libs/TCardApi.jar')
     compile(name: 'securePay-V3.1.0_20170607', ext: 'aar')
+    compile(name: 'LRecyclerview_library-release', ext: 'aar')
     //个推sdk
     compile 'com.getui:sdk:2.11.1.0'
     compile 'com.android.support:support-v4:+'
