--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -183,6 +183,8 @@
         </activity>
         <activity android:name=".activitiy.webview.WebViewActivity">
         </activity>
+        <activity android:name=".activitiy.GuideActivity">
+        </activity>
 
 
         <!--扫描银行卡-->
