--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activitiy.BannerActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden"/>
+        <activity
             android:name=".activitiy.login.LoginActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:launchMode="singleTask"
