--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,4 +109,6 @@ dependencies {
     compile 'com.getui:mzp:1.0.4'
     //小米推送
     compile 'com.getui:xmp:1.0.2'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.jakewharton:disklrucache:2.0.2'
 }
